--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-groq_api_key= "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"
+API_KEY = "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"
